--- a/.gitignore
+++ b/.gitignore
@@ -24,23 +24,9 @@
 !cfg/yolov3*.cfg
 
 storage.googleapis.com
-runs/*
-data/*
-data/images/*
-!data/*.yaml
-!data/hyps
-!data/scripts
-!data/images
-!data/images/zidane.jpg
-!data/images/bus.jpg
-!data/*.sh
-
-results*.csv
-
-# Datasets -------------------------------------------------------------------------------------------------------------
-coco/
-coco128/
-VOC/
+data/TACO/images/
+data/TACO/labels/
+!data/TACO/*.json
 
 # MATLAB GitIgnore -----------------------------------------------------------------------------------------------------
 *.m~
