--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 # Base ------------------------------------------------------------------------
 ipython  # interactive notebook
 matplotlib>=3.2.2
-numpy>=1.18.5
+numpy>=1.23.4 # 1.18.5 
 opencv-python>=4.1.1
 Pillow>=7.1.2
 psutil  # system resources
